# SemiDiscreteOT

./: CMakeLists.txt  Dockerfile  Dockerfile.library  Doxyfile  README.md
.github/workflows/: build-and-deploy-docs.yml  build-and-publish-library.yml  build.yml  documentation.yml  publish-dependencies-image.yml  publish-docker.yml
cmake/: SemiDiscreteOTConfig.cmake.in
docs/: doxygen_custom.css  index.md
examples/: CMakeLists.txt
examples/tutorial_0/: CMakeLists.txt  README.md
examples/tutorial_0/run/: source.msh  target_points.txt
examples/tutorial_0/src/: tutorial_0.cc
examples/tutorial_1/: .gitignore  CMakeLists.txt  README.md
examples/tutorial_1/run/: parameters.prm  parameters_sot.prm
examples/tutorial_1/src/: Mixed.cc  Mixed.h  PressureDensityField.cc  PressureDensityField.h
examples/tutorial_2/: CMakeLists.txt
examples/tutorial_2/run/: README.md  conditional_density_epsilon0.1.vtu  conditional_density_epsilon1.vtu  conditional_density_epsilon10.vtu  parameters.prm
examples/tutorial_2/src/: PotentialDensity.cc  PotentialDensity.h
examples/tutorial_3/: CMakeLists.txt  README.md
examples/tutorial_3/run/: parameters.prm
examples/tutorial_3/src/: SphereData.cc  SphereData.h
examples/tutorial_4/: CMakeLists.txt  README.md  main.cc  main_gradient_descent.cc  main_lloyd.cc  parameters.prm
examples/tutorial_4/run/: cylinder.msh  parameters.prm  parameters_gradient.prm  parameters_lloyd.prm  slider.py  sphere.msh
examples/tutorial_4/run/python_scripts/: multilevel_clustering_faiss_cpu.py
examples/tutorial_4/src/: WassersteinBarycentersUniform.cc  WassersteinBarycentersUniform.h  main_gradient_descent.cc  main_lloyd.cc
examples/tutorial_5/: CMakeLists.txt  README.md
examples/tutorial_5/run/: parameters.prm
examples/tutorial_5/src/: WassersteinBarycentersFixedDomain.cc  WassersteinBarycentersFixedDomain.h
examples/tutorial_6/: CMakeLists.txt  README.md
examples/tutorial_6/run/: parameters.prm
examples/tutorial_6/src/: KokkosSOT.cc  KokkosSOT.h  kokkos_bfgs.h
include/SemiDiscreteOT/core/: Lloyd.h  MeshHierarchy.h  MeshManager.h  MeshManager.templates.h  OptimalTransportPlan.h  PointCloudHierarchy.h  PowerDiagram.h  SemiDiscreteOT.h  WassersteinBarycenters.h  line_minimization.h  wasserstein_solver_bfgs.h
include/SemiDiscreteOT/solvers/: Distance.h  EpsilonScalingHandler.h  ExactSot.h  SoftmaxRefinement.h  SotSolver.h
include/SemiDiscreteOT/utils/: ColorDefinitions.h  ParameterManager.h  VtkHandler.h  utils.h
include/SemiDiscreteOT/utils/dkm/: dkm_utils.hpp
integration/: CMakeLists.txt  integrate_marked.cc  main.cc
power_diagram/cgal/: CMakeLists.txt  power_diagram.cc
power_diagram/dealii_parallel/: CMakeLists.txt
power_diagram/dealii_parallel/run/: power_diagram_3d.pvtu
power_diagram/dealii_parallel/src/: PowerDiagram.cpp  PowerDiagram.h  main.cpp
power_diagram/dealii_serial/src/: PowerDiagram.cpp  PowerDiagram.h  main.cpp
rsot_convex2convex/: .gitignore  CMakeLists.txt
rsot_convex2convex/run/: parameters.prm  plot_centroids.py
rsot_convex2convex/run/scripts/: run_experiments_cluster.sh  run_experiments_workstation.sh
rsot_convex2convex/src/: EpsilonScalingHandler.cc  ExactSot.cc  ExactSot.h  MeshHierarchy.cc  OptimalTransportPlan.cc  ParameterManager.cc  ParameterManager.h  PointCloudHierarchy.cc  PointCloudHierarchy.h  PowerDiagram.cc  PowerDiagram.h  PowerDiagramDealII.cc  PowerDiagramGeogram.cc  SemidiscreteOT.cc  SemidiscreteOT.h  SoftmaxRefinement.cc  SoftmaxRefinement.h  SotSolver.cc  SotSolver.h  main.cc  rsot.cc  rsot.h  rsot_working.cc  utils.h
rsot_convex2convex/src/python_scripts/: multilevel_clustering_faiss_cpu.py  multilevel_clustering_faiss_gpu.py  multilevel_clustering_scipy.py
run/: README.md  parameters.prm
src/: ComputeSot.cc
src/core/: DictionaryLearning.cc  Lloyd.cc  MeshHierarchy.cc  OptimalTransportPlan.cc  PointCloudHierarchy.cc  PowerDiagramDealII.cc  PowerDiagramGeogram.cc  SemiDiscreteOT.cc  WassersteinBarycenters.cc
src/python_scripts/: multilevel_clustering_faiss_gpu.py  multilevel_clustering_scipy.py
src/solvers/: EpsilonScalingHandler.cc  ExactSot.cc  SoftmaxRefinement.cc  SotSolver.cc
src/utils/: ParameterManager.cc  VtkHandler.cc
